# spreebreak_2024ws_bot

./: Cargo.toml  Dockerfile  README.md  demo.sql
src/: main.rs  model.rs
