[package]
name = "spreebreak_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "bincode", "bincode-serializer", "erased", "sqlite-storage-rustls"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde = "1.0.214"
dotenv = "0.15.0"
chrono = "0.4"
futures = "0.3"
url = "2.5.3"
